<resources>
    <string name="app_name">Supershop</string>
    <string name="nav_header_title">MIMs Super Shop</string>
    <string name="nav_header_subtitle">Buy Efficiently and Eat Healthy Foods</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_veg_and_fruit">Vegetables and Fruits</string>
    <string name="menu_meat_and_fish">Meat and Fish</string>
    <string name="menu_grocery_items">Grocery Items</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
</resources>
